Fix raw timestamps (zero-pad usecs) Print 4-digit years in TIMESTAMP_PARSEABLE mode after '99.

PR:		bin/9507